@@ -1,16 +1,13 @@
 package grit.guidance.domain.graduation.service;
 
-import grit.guidance.domain.user.entity.TrackType;
-import grit.guidance.domain.course.entity.Course;
 import grit.guidance.domain.graduation.dto.CertificationStatusDto;
-import grit.guidance.domain.graduation.dto.DashboardResponseDto;
-import grit.guidance.domain.graduation.dto.GraduationPlanRequestDto;
+import grit.guidance.domain.graduation.dto.DetailedCreditDto;
+import grit.guidance.domain.graduation.dto.GraduationResponseDto;
 import grit.guidance.domain.graduation.dto.TrackProgressDto;
-import grit.guidance.domain.user.entity.CompletedCourse;
+import grit.guidance.domain.graduation.entity.CrawlingGraduation;
+import grit.guidance.domain.graduation.repository.CrawlingGraduationRepository;
 import grit.guidance.domain.user.entity.GraduationRequirement;
-import grit.guidance.domain.user.entity.UserTrack;
 import grit.guidance.domain.user.entity.Users;
-import grit.guidance.domain.user.repository.CompletedCourseRepository;
 import grit.guidance.domain.user.repository.GraduationRequirementRepository;
 import grit.guidance.domain.user.repository.UserTrackRepository;
 import grit.guidance.domain.user.repository.UsersRepository;
@@ -19,8 +16,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Slf4j
 @Service
@@ -29,14 +25,19 @@ import java.util.stream.Collectors;
 public class GraduationService {
 
     private final UsersRepository usersRepository;
-    private final CompletedCourseRepository completedCourseRepository;
     private final GraduationRequirementRepository graduationRequirementRepository;
+    private final CrawlingGraduationRepository crawlingGraduationRepository;
     private final UserTrackRepository userTrackRepository;
 
-    public DashboardResponseDto getDashboardData(String studentId) { // ⭐ HansungDataResponse 인자 제거
+    public GraduationResponseDto getDashboardData(String studentId) {
         Users user = usersRepository.findByStudentId(studentId)
                 .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다. 학번: " + studentId));
 
+        // 1. 크롤링된 학점 정보 조회
+        CrawlingGraduation crawlingData = crawlingGraduationRepository.findByUsers(user)
+                .orElseThrow(() -> new IllegalStateException("크롤링된 졸업 데이터를 찾을 수 없습니다. 먼저 크롤링을 수행해주세요."));
+
+        // 2. 졸업 인증 요건 조회
         GraduationRequirement requirement = graduationRequirementRepository.findByUsers(user)
                 .orElse(GraduationRequirement.builder()
                         .users(user)
@@ -45,69 +46,77 @@ public class GraduationService {
                         .awardOrCertificateReceived(false)
                         .build());
 
-        List<UserTrack> userTracks = userTrackRepository.findByUsers(user);
-        List<String> orderedTrackNames = userTracks.stream()
+        // 3. 트랙별 DTO 생성 (크롤링 데이터 활용)
+        List<String> orderedTrackNames = userTrackRepository.findByUsers(user).stream()
                 .sorted((a, b) -> a.getTrackType().name().compareTo(b.getTrackType().name()))
                 .map(ut -> ut.getTrack().getTrackName())
-                .collect(Collectors.toList());
+                .toList();
 
-        List<CompletedCourse> completedCourses = completedCourseRepository.findByUsers(user);
-        Map<String, Integer> completedCreditsByTrack = new LinkedHashMap<>();
-        Set<Long> countedCourseIds = new HashSet<>();
+        // 트랙1 상세 학점
+        DetailedCreditDto track1MajorBasic = DetailedCreditDto.builder()
+                .completedCredits(crawlingData.getTrack1MajorBasic())
+                .requiredCredits(3)
+                .build();
 
-        for (CompletedCourse cc : completedCourses) {
-            Course course = cc.getCourse();
-            if (countedCourseIds.contains(course.getId())) {
-                continue;
-            }
-            if (cc.getTrack() != null) {
-                String trackName = cc.getTrack().getTrackName();
-                if (orderedTrackNames.contains(trackName)) {
-                    completedCreditsByTrack.merge(trackName, course.getCredits(), Integer::sum);
-                    countedCourseIds.add(course.getId());
-                }
-            }
-        }
+        DetailedCreditDto track1MajorRequired = DetailedCreditDto.builder()
+                .completedCredits(crawlingData.getTrack1MajorRequired())
+                .requiredCredits(15)
+                .build();
 
-        final int REQUIRED_PER_TRACK = 39;
-        List<TrackProgressDto> trackProgressList = orderedTrackNames.stream()
-                .map(trackName -> {
-                    int completed = completedCreditsByTrack.getOrDefault(trackName, 0);
-                    int required = REQUIRED_PER_TRACK;
-                    double progress = required > 0 ? (completed * 100.0) / required : 0;
-                    return TrackProgressDto.builder()
-                            .trackName(trackName)
-                            .category("트랙")
-                            .completedCredits(completed)
-                            .requiredCredits(required)
-                            .remainingCredits(Math.max(0, required - completed))
-                            .progressRate(progress)
-                            .build();
-                })
-                .collect(Collectors.toList());
+        DetailedCreditDto track1MajorSubtotal = DetailedCreditDto.builder()
+                .completedCredits(crawlingData.getTrack1MajorSubtotal())
+                .requiredCredits(39)
+                .build();
 
-        int totalCompletedCredits = completedCourses.stream()
-                .mapToInt(cc -> cc.getCourse().getCredits())
-                .sum();
+        // 트랙1 진행 상황
+        TrackProgressDto track1Progress = TrackProgressDto.builder()
+                .trackName(orderedTrackNames.get(0))
+                .category("트랙")
+                .majorBasic(track1MajorBasic)
+                .majorRequired(track1MajorRequired)
+                .majorSubtotal(track1MajorSubtotal)
+                .build();
 
-        int totalRequiredCredits = 130;
+        // 트랙2 상세 학점
+        DetailedCreditDto track2MajorBasic = DetailedCreditDto.builder()
+                .completedCredits(crawlingData.getTrack2MajorBasic())
+                .requiredCredits(3)
+                .build();
 
+        DetailedCreditDto track2MajorRequired = DetailedCreditDto.builder()
+                .completedCredits(crawlingData.getTrack2MajorRequired())
+                .requiredCredits(15)
+                .build();
+
+        DetailedCreditDto track2MajorSubtotal = DetailedCreditDto.builder()
+                .completedCredits(crawlingData.getTrack2MajorSubtotal())
+                .requiredCredits(39)
+                .build();
+
+        // 트랙2 진행 상황
+        TrackProgressDto track2Progress = TrackProgressDto.builder()
+                .trackName(orderedTrackNames.get(1))
+                .category("트랙")
+                .majorBasic(track2MajorBasic)
+                .majorRequired(track2MajorRequired)
+                .majorSubtotal(track2MajorSubtotal)
+                .build();
+
+        List<TrackProgressDto> trackProgressList = List.of(track1Progress, track2Progress);
+
+        // 4. 졸업 인증 상태 DTO 생성
         List<CertificationStatusDto> certifications = List.of(
                 CertificationStatusDto.builder().certificationName("캡스톤디자인 발표회 작품 출품").isCompleted(requirement.getCapstoneCompleted()).build(),
                 CertificationStatusDto.builder().certificationName("졸업 논문").isCompleted(requirement.getThesisSubmitted()).build(),
                 CertificationStatusDto.builder().certificationName("전공 관련 자격증/공모전 입상").isCompleted(requirement.getAwardOrCertificateReceived()).build()
         );
 
-        return DashboardResponseDto.builder()
-                .totalCompletedCredits(totalCompletedCredits)
-                .totalRequiredCredits(totalRequiredCredits)
+        // 5. 최종 응답 DTO 생성 및 반환
+        return GraduationResponseDto.builder()
+                .totalCompletedCredits(crawlingData.getTotalCompletedCredits())
+                .totalRequiredCredits(crawlingData.getTotalMajorRequired())
                 .trackProgressList(trackProgressList)
                 .certifications(certifications)
                 .build();
-    }
-
-    @Transactional
-    public void saveGraduationPlan(GraduationPlanRequestDto planDto) {
-        // ...
     }
 }
